css/user_interface.css
/*
 * Copyright (C) 2022 Eric Roy & Isaac Iglesias
 *
 * This program is free software: you can redistribute it and/or modify it
 * under the terms of the GNU General Public License as published by the Free
 * Software Foundation, either version 3 of the License, or (at your option)
 * any later version.
 *
 * This program is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 * FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 * more details.
 *
 * You should have received a copy of the GNU General Public License along with
 * this program. If not, see http://www.gnu.org/licenses/.
*/

body {
    width: 300px;
    height: 500px;
    position: relative;
    overflow: hidden;
    margin: 0px;
    font-family: Verdana, sans-serif;
    background-color: #F4F4F4;
    padding: 0;
    font-size: 12px;
}

p {
    text-align: justify;
    margin-right: 10%;
    margin-left: 10%;
}

h2 {
    margin-left: 10%;
    font-size: 1.0rem;
}

::-webkit-scrollbar-track {
	background-color: #F5F5F5;
}

::-webkit-scrollbar {
	width: 10px;
	background-color: #F5F5F5;
}

::-webkit-scrollbar-thumb {
    border-radius: 10px;
	background-color: #0d6efd;	
}

.arrowDiv {
    position: absolute;
    top: 23%;
    left: 10%;
}

.arrow {
    border: solid black;
    border-width: 0 4px 4px 0;
    display: inline-block;
    padding: 4px;
    cursor: pointer;
    transition: all 200ms ease;
}

.left {
    transform: rotate(135deg);
    -webkit-transform: rotate(135deg);
}

.arrow:hover {
    border-width: 0 5px 5px 0;
    padding: 5px;
    transition: all 200ms ease;
}

#landpageDiv{
    position: absolute;
    height: 100%;
    width: 101%;
}

#settingDiv,
#aboutDiv {
    position: absolute;
    height: 100%;
    width: 101%;
}

.titleDiv {
    background-image: linear-gradient(#bdd5f1, #F4F4F4);
    position: absolute;
    width: 100%;
    height: 15%;
    top: 0;
    left: 0;
}

.title {
    text-align: center;
    vertical-align: middle;
    color: #363636;
    font-size: 1.2rem;
}

.bodyPopup {
    position: absolute;
    width: 100%;
    height: 85%;
    top: 15%;
}

.navDiv {
    margin: 0 auto;
    width: 50%;
    border-spacing: 10px;
}

.tdButton button {
    width: 90px;
}

.tableBig,
.tableSmall{
    border-spacing: 0 10px;
    margin-left: 7.5%;
    width: 260px;
    table-layout: fixed;
}

.tableSmall{
    border-spacing: 10px 10px;
    margin-left: 4.5%;
    width: 278px;
}

.tableBigTr,
.tableSmallTr {
    height: 50px;
    cursor: pointer;
}

.tableBigTr td,
.tableSmallTr td {
    height: 50px;
    transform: scale(1);
    transition: transform .1s ease-in;
}

.tableBigTd{
    max-width: 65px;
    text-align: right;
    background: linear-gradient(0deg, #F4F4F4, lightgrey);
}

.tableSmallTd {
    vertical-align: middle;
    text-align: center;
    background: linear-gradient(0deg, #F4F4F4, lightgrey);
}

.tableBig .tableBigTr:hover td{
    transform: scale(1.1);
    transition: transform .1s ease-in;
}

.tableSmall .tableSmallTd:hover{
    transform: scale(1.1);
    transition: transform .1s ease-in;
}

.imgLogo{
    height: 50px;
    width: 50px;
    opacity: 65%;
}

.imgLogoSmall {
    height: 50px;
    width: 50px;
    opacity: 85%;
}

.tableText{
    font-size: 1.0rem;
    font-weight: 600;
    font-family: Arial, Helvetica, sans-serif;
}

button {
    cursor: pointer;
    outline: 0;
    display: inline-block;
    font-weight: 400;
    line-height: 1.2;
    text-align: center;
    background-color: transparent;
    border: 1px solid transparent;
    padding: 4px 10px;
    font-size: 0.7rem;
    border-radius: .25rem;
    transition: color 1s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
    color: #0d6efd;
    border-color: #0d6efd;
}

.tdButton button:hover, .centeredButton:hover {
    color: black;
    background-color: #bdd5f1;
    border-color: black;
}

.centeredButton{
    margin: 0 auto;
    display: block;
}

.ttButton:hover{
    color: black;
    background-color: #bdd5f1;
    border-color: black;   
}

.switch {
    position: relative;
    width: 35px;
    height: 15px;
    left: 220px;
    margin: 15px;
    border: 10px black;
}
  
.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.textCheckbox{
    position: relative;
    text-decoration: none;
    left: -200px;
    width: 190px;
}

.subTextCheckbox{
    position: relative;
    text-decoration: none;
    left: 20px;
    width: 210px;
    font-size: 0.65rem;
    margin-top: 10px;
    margin-bottom: 10px;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
}
  
.slider:before {
    position: absolute;
    content: "";
    height: 15px;
    width: 15px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
}
  
input:checked + .slider {
    background-color: #2196F3;
}
  
input:checked + .slider:before {
    -webkit-transform: translateX(20px);
    -ms-transform: translateX(20px);
    transform: translateX(20px);
}

.slider.round {
    border-radius: 20px;
}
  
.slider.round:before {
    border-radius: 50%; 
}

#upc_credentials {
    position: relative;
    left: 50px;
    width: 200px;
}

.gmailForm{
    position: relative;
    left: 40px;
}

#password,
#username{
    width: 180px;
}

.new {
    background-color:rgb(252, 239, 89);
    font-weight: bolder;
}

.hidden {display: none;}

.disabled {
    opacity: 50%;
    cursor: not-allowed;
}

/* Tooltip container */
.tooltip {
    position: relative;
}

/* Tooltip text */
.tooltip .tooltiptext {
    visibility: hidden;
    width: 90px;
    background-color: #555;
    color: #fff;
    text-align: center;
    padding: 5px 0;
    border-radius: 6px;

    /* Position the tooltip text */
    position: absolute;
    z-index: 1;
    bottom: 125%;
    left: 50%;
    margin-left: -45px;

    /* Fade in tooltip */
    opacity: 0;
    transition: opacity 0.3s;
}

/* Tooltip arrow */
.tooltip .tooltiptext::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: #555 transparent transparent transparent;
}

/* Show the tooltip text when you mouse over the tooltip container */
.tooltip:hover .tooltiptext {
    visibility: visible;
    opacity: 1;
}

.grouplist {
    color:darkgrey;
    font-size:75%;
}

#easter_egg:hover {
    animation-name: spin;
    animation-duration: 300ms;
    animation-iteration-count: infinite;
    animation-timing-function: linear; 
}

@keyframes spin {
    from {
        transform:rotate(0deg);
    }
    to {
        transform:rotate(360deg);
    }
}

